@@ -5,6 +5,7 @@ from pathlib import Path
 import logging
 
 from box import Box, BoxError
+from ruamel.yaml import YAMLError
 
 from fastflix.models.video import Video, VideoSettings, Status, Crop
 from fastflix.models.encode import AudioTrack, SubtitleTrack, AttachmentTrack
@@ -19,8 +20,8 @@ def get_queue(queue_file: Path) -> List[Video]:
 
     try:
         loaded = Box.from_yaml(filename=queue_file)
-    except BoxError:
-        # TODO log
+    except (BoxError, YAMLError):
+        logger.exception("Could not open queue")
         return []
 
     queue = []
@@ -32,7 +33,15 @@ def get_queue(queue_file: Path) -> List[Video]:
         ves = [x(**encoder_settings) for x in setting_types.values() if x().name == encoder_settings["name"]][0]
         audio = [AudioTrack(**x) for x in video["video_settings"]["audio_tracks"]]
         subtitles = [SubtitleTrack(**x) for x in video["video_settings"]["subtitle_tracks"]]
-        attachments = [AttachmentTrack(**x) for x in video["video_settings"]["attachment_tracks"]]
+        attachments = []
+        for x in video["video_settings"]["attachment_tracks"]:
+            try:
+                attachment_path = x.pop("file_path")
+            except KeyError:
+                attachment_path = None
+            attachment = AttachmentTrack(**x)
+            attachment.file_path = attachment_path
+            attachments.append(attachment)
         status = Status(**video["status"])
         crop = None
         if video["video_settings"]["crop"]:
@@ -63,6 +72,9 @@ def save_queue(queue: List[Video], queue_file: Path):
         video["source"] = os.fspath(video["source"])
         video["work_path"] = os.fspath(video["work_path"])
         video["video_settings"]["output_path"] = os.fspath(video["video_settings"]["output_path"])
+        for track in video["video_settings"]["attachment_tracks"]:
+            if track.get("file_path"):
+                track["file_path"] = str(track["file_path"])
         items.append(video)
     Box(queue=items).to_yaml(filename=queue_file)
     logger.debug(f"queue saved to recovery file {queue_file}")
